pavis13-dbs: more review work
git-svn-id: https://scivis.itn.liu.se/svn/publications/workinprogress/pavis13-dbs@4183 cd0c9ba3-fe29-0410-b0c2-9a6eeba77867

--- a/pavis13-dbs.tex
+++ b/pavis13-dbs.tex
@@ -251,7 +251,7 @@ To increase the amount of information the surgeon gains from the cylinder walls,
 %So far, all the described features of the contextual view are common to all three phases. However, the specialty in this phase for the contextual view is, that it also indicates the slice which is currently viewed in the slice view, as a dark gray band projected onto the head. Based on this band, the surgeon can immediately see at which depth the currently viewed slice is located. While any surgeon will possess the knowledge to roughly infer this information from the surrounding tissue or by comparing the number of total slices to the current slice number, both methods require conscious or subconscious mental processing which should be avoided. Perceiving a band projected to the 3D structures is a much more intuitive way requiring potentially less cognitive effort, such that the surgeon can focus on locating the target region.
 
 \subsection{Recording Phase}\label{sec:overview:recording}
-The recording phase is the next step during a DBS intervention following the opening of the patient's skull. While moving the electrodes deeper towards the target region, each detects the signals from the surrounding tissue and transmits them to the controlling device. To obtain knowledge about the current region, the received signals are constantly analyzed and classified.
+The recording phase is the next step during a DBS intervention. While advancing the electrodes towards the target region, each detects the signals from the surrounding tissue and transmits them to the controlling device. To obtain knowledge about the current region, the received signals are constantly analyzed and classified.
 
 %\subsubsection{MER Signal Analysis}\label{sec:overview:recording:signalanalysis}
 %The MER signals are highly corrupted by noise, as the transmission is followed by an amplification of around three orders of magnitude, i.\,e.,~from $\mu V$ to $V$, which introduces $1/f$ wideband random component noise. In our system, also another type of noise was detected, a set of sinusoidal or very narrow band signals pitched at constant frequencies. While the $1/f$ noise is justified by thermal noise in the amplification system, which reaches critical levels, the origin of the sinusoidal components is unknown and probably due to interference with other equipment used during surgery. The $1/f$ noise has amplitudes comparable to the neuron pulses to be detected, while the latter are still audible in the auditory analyses.
@@ -261,23 +261,23 @@ The recording phase is the next step during a DBS intervention following the ope
 
 %In the target region, the amplitude of the neuron firing signal is higher than that of the noise floor. For automatic detection and visualization purposes a threshold on the noise floor is estimated in zones where the neuron firing signal is not present. Applying this threshold to the instantaneous signal amplitude in the time domain has then the effect of revealing and enhancing the peaks of the neuron firing signal when they are present. Based on this signal, 
 
-Possibilities exist to automatically detect the region. The analysis and computation of these metrics, however, is not in the main focus of this paper, so this it is not elaborated on in detail. Instead, any of the following variants can be chosen and a comparative study might be the focus of future work. One possible set of metrics consist of the firing rate, burst index, pause ratio, and the pause index, which were introduced by Haese et al.~\cite{Haese2005}. They also determined, that these metrics are useful to map the signals to specific brain regions. These values are computed using the denoised signal and applying a non-linear energy operator as presented by Maragos et al.~\cite{Maragos1993} and a spike detection with a subsequent thresholding presented by Mukhopadhyay et al.~\cite{Mukhopadhyay1998}. As several other comparable approaches exist, for our setup it makes no systematical difference, which of the classification algorithms are used.
+Possibilities exist to automatically detect the region. The analysis and computation of these metrics, however, is not in the main focus of this paper so it is not elaborated on in detail. Instead, any of the following variants can be chosen and a comparative study might be the focus of future work. One possible set of metrics consist of the firing rate, burst index, pause ratio, and the pause index, which were introduced by Haese et al.~\cite{Haese2005}. They also found out that these metrics are useful to map the signals to specific brain regions. These values are computed using a denoised signal and applying a non-linear energy operator as presented by Maragos et al.~\cite{Maragos1993} and a spike detection with a subsequent thresholding presented by Mukhopadhyay et al.~\cite{Mukhopadhyay1998}. Several other approaches for this technique exist and these make no systematical difference for our system.
 
 \subsubsection{Additions to the Contextual View}\label{sec:overview:recording:3d}
 \begin{figure}
     \centering
     \fbox{\includegraphics[width=0.9\columnwidth]{figures/recording_3d}}
-    \caption{In the recording phase the contextual view additionally shows the intra-operatively acquired x-ray scans. It further shows the electrode while it is being advanced towards the target. The beads behind the electrodes show the results of the MER signal analysis.}
+    \caption{In the recording phase the contextual view additionally shows the intra-operatively acquired x-ray scans. It further renders the electrode while it is being advanced towards the target. The beads behind the electrodes represent the results of the MER signal analysis.}
     \label{fig:recordingphase:3d}
 \end{figure}
 
-The contextual view as employed in the recording phase is, in most parts, identical to the one used in the planning phase. However, as this phase of the intervention process requires additional information the view differs in some ways. First, since the current depth of the MER electrodes is known, we can compute and display a representation of the electrodes. As the extent of the electrodes is very small compared to the whole head, and we are only interested in the general position and orientation of the electrodes, just a single representative proxy electrode is rendered. 
+The contextual view as employed in the recording phase is, in most parts, identical to the one used in the planning phase. As this phase of the intervention process, however, requires additional information, the view differs in some ways. First, since the current depth of the MER electrodes is known, we can compute and display a representation of the electrodes. As the extent of the electrodes is very small compared to the whole head, and we are only interested in the general position and orientation of the electrodes, just a single representative proxy electrode is rendered. 
 
-Using the MER signal analysis, we can classify depth values by their functional areas. Doing this continuously for every point along the access path would introduce a lot of visual clutter that would not give additional insight but rather confuse the user. Therefore, we classify and summarize segments along the trajectory that we can classify up to an acceptable certainty. For each classified segment we display a glyph representation, to which we refer as a \emph{bead}, in the center of the canal at that specific position. Each bead is rendered as a shaded sphere with a specific color. This visual metaphor has been proposed before~\cite{Miocinovic2007,Haese2005} and provides both contextual and functional information. The bead's color correlates to the classified region. A black bead is created if there has been a longer distance without a reliable classification. These intermediate beads are important to maintain the analogy of a bead string, helping the user understand the spatial relationship. Different shades of red are used for areas that lie outside of the desired target area. It is important to present this information to the surgeon as he can deduce more information from the changes between different areas. The first choice for a color would be different shades of gray, since it does not draw as much attention. But since the canal wall is gray and the human visual system is not adapted to differentiate gray tones, we chose red as the hue for these regions. As soon as the analysis of the spike signals indicates that the MER electrodes are in the target region, green beads are rendered that draw attention to those structures. Furthermore this color coding resembles the traffic light color scheme proposed by Rieder et al.~\cite{Rieder2010}, which intuitively assigns green to {\it good} areas, while red is assigned to {\it bad} areas. To further reduce visual clutter only one bead is rendered for all electrodes. This is a viable simplification as the different functional regions of the brain are oriented such that either all electrodes detect the same signal (either type of tissue or undefined) or a subset of electrodes detects a regional signal and the others detect an undefined signal.
+Using the MER signal analysis, we can classify depth values by their functional areas. Doing this continuously for every point along the access path would introduce a lot of visual clutter that would not give additional insight. Therefore we classify and summarize segments along the trajectory that we can classify up to an acceptable certainty. For each classified segment we display a glyph representation, to which we refer as a \emph{bead}, in the center of the canal. Each bead is rendered as a shaded sphere with a specific color. This visual metaphor has been proposed before~\cite{Miocinovic2007,Haese2005} and provides contextual and functional information. The bead's color correlates to the classified region. A black bead is created if there has been a longer distance without a reliable classification. These intermediate beads are important to maintain the analogy, i.e., the spatial relationship, of a bead string. Different shades of red are used for areas that lie outside of the desired target area. It is important to present this information to the surgeon as he can deduce more information from the changes between different areas. The first choice for a color would be different shades of gray, since it does not draw as much attention. But since the canal wall is gray and the human visual system is not adapted to differentiate gray tones, we chose red as the hue for these regions. As soon as the analysis of the spike signals indicates that the MER electrodes are in the target region, green beads are rendered that draw attention to those structures. Furthermore, this color coding resembles the traffic light color scheme proposed by Rieder et al.~\cite{Rieder2010}, which intuitively assigns green to {\it good} areas, while red is assigned to {\it bad} areas. To further reduce visual clutter only one bead is rendered for all electrodes. This is a viable simplification as the different functional regions of the brain are oriented such that either all electrodes detect the same signal (either type of tissue or undefined) or a subset of electrodes detects a regional signal and the others detect an undefined signal.
 
-Even with the application of the depth darkening shading technique described by Luft et al.~\cite{Luft2005}, the depth perception of the electrode is not optimal. One possible solution would be the introduction of a distance ring as described by Rieder et al.~\cite{Rieder2008}. Instead, to reduce occlusion within the focus of the view, we decided to show a linear scale outside of the view's focus where it does not block any relevant structures. The vertical white bar in this scale gives immediate feedback about the electrode's position. This widget is the first visualization used within our system, which employs a \emph{normalized view}. It means that the left-most position in the view corresponds to the entry point of the access path and the right-most position is slightly further than the intended target region. As soon as a functional area has been detected the background is colored with the respective color as well. Even though the beads convey a good absolute spatial orientation their relative orientation is not immediately obvious for occlusion and perspective distortion. On the other hand, the distance widget does not contain any information about the absolute location. The combination of the beads in the contextual view and the color in the distance widget provide the relevant information to the surgeon.
+Even with the application of the depth darkening shading technique described by Luft et al.~\cite{Luft2005}, the depth perception of the electrode is not optimal. One possible solution would be the introduction of a distance ring as described by Rieder et al.~\cite{Rieder2008}. Instead, to reduce occlusion within the focus of the view, we decided to show a linear scale outside of the view's focus, where it does not block any relevant structures. The vertical white bar in this scale gives immediate feedback about the electrode's position. This widget is the first visualization used within our system, which employs a \emph{normalized view}. It means that the left-most position in the view corresponds to the entry point of the access path and the right-most position is slightly further than the intended target region. As soon as a functional area has been detected the background is colored with the respective color. Although the beads convey a good absolute spatial orientation, their relative orientation is not immediately obvious because of occlusion and perspective distortion. On the other hand, the distance widget does not contain any information about the absolute location. The combination of the beads in the contextual view and the color in the distance widget provide the relevant information to the surgeon.
 
-Another addition to this view is the inclusion of the intra-operative x-ray images, which can be easily registered to the patient using the external and internal camera matrices and the known geometry of the two reference plates, which are shown in Figure~\ref{fig:xrayreferencescans}~\cite{Caprile1990,Zheng2008}. Using the complete camera matrix, it is possible to select a point in both images and reconstruct, up to a certain accuracy, a 3D position within the volume from it~\cite{Hartley2004}. On demand the position of the reconstructed electrode position will be shown in this view by rendering a second electrode in gray that is blurred to accommodate for the uncertainty. The specific uncertainty is, among other things, dependent on the geometry and resolution of the x-ray detectors and is therefore different for each operating room. In our test case the position is in the order of $< 1$mm. As these x-ray scans are used to guide the surgeon on his way to the target region and provide one important possibility to verify the final position of the electrode, the integration with the other spatial modalities is important. In addition, we use the discrepancy between the expected electrode position and the reconstructed position as an uncertainty for the target region's segmentation in the later phase.
+Another addition to this view is the inclusion of the intra-operative x-ray images, which can be easily registered to the patient using the external and internal camera matrices and the known geometry of the two reference plates, which are shown in Figure~\ref{fig:xrayreferencescans}~\cite{Caprile1990,Zheng2008}. Using the complete camera matrix, it is possible to select a point in both images and reconstruct, up to a certain accuracy, a 3D position within the volume from it~\cite{Hartley2004}. The position of the reconstructed electrode position will be shown on demand in this view by rendering a second electrode in gray that is blurred to accommodate for the uncertainty in reconstruction. The specific uncertainty is, among other things, dependent on the geometry and resolution of the x-ray detectors and is therefore different for each operating room. In our test case the position is in the order of $< 1$mm. As these x-ray scans are used to guide the surgeon to the target region and provide one important possibility to verify the final position of the electrode, the integration with the other spatial modalities is important. In addition, we use the discrepancy between the expected electrode position and the reconstructed position as an uncertainty for the target region's segmentation in the later phase.
 
 %
 %\subsubsection{Multi-Planar Slice View}\label{sec:overview:recording:mpr}
@@ -306,30 +306,30 @@ In this view we present the raw data collected by the MER electrodes in real tim
 
 Since surgeons are generally more interested in the distribution of spikes than the background noise, we visually enhance spikes such that they are the immediate focus of attention. This visual enhancement is done by defining a threshold value below which all values are de-emphasized, i.\,e.,~a darker color is chosen and above which the values are emphasized with a brighter color. There is an exponential transition in the area around the threshold to reduce any unwanted attention that would otherwise result from a discontinuity. This threshold value can be varied by the user to include a wider or narrower range of values in the focus area. The color scheme matches the color on the electrode representations and at the same time intensifies the perceptual distance between the colors used for the thresholded area and the spikes.
 
-To facilitate linking between all views containing a representation of the MER signal further, the surgeon can select electrodes which are then highlighted in all views (see Figure~\ref{fig:recordingphase:sound}). A problem with current systems is that the surgeon must maintain a mental model relating the horizontal oscilloscope graphs with the geometric orientation of the electrodes within the patient's head. By creating a linked view between those two representations, we reduce the mental burden on the surgeon without preventing him access to any of the information.
+To facilitate linking between all views containing a representation of the MER signal further, the surgeon can select electrodes which are then highlighted in all views (see Figure~\ref{fig:recordingphase:sound}). A problem with current systems is that the surgeon must maintain a mental model relating the horizontal oscilloscope graphs with the geometric orientation of the electrodes in the patient's head. By creating a linked view between those two representations, we reduce the mental burden on the surgeon without preventing him access to any of the information.
 
 \subsubsection{3D Spatiotemporal Audio Visualization}\label{sec:overview:recording:3daudio}
 \begin{figure}[t]
     \centering
     \fbox{\includegraphics[width=\columnwidth, height=0.5\columnwidth]{figures/recording-3dsound}}
-    \caption{Combining the spatial orientation and layout of the recording electrodes with the temporal signal relieves the surgeon of the burden to keep this association in mind. To enhance the perception of the spikes, only the values above a certain threshold are shown in this view so that they are visible pre-attentively. The picture shows the same signal for subsequent time steps. The inset shows the result for one electrode without thresholding.}
+    \caption{Combining the spatial orientation and layout of the recording electrodes with the temporal signal relieves the surgeon of the burden to keep this association in mind. To enhance the perception of the spikes, only the values above a certain threshold are shown in this view so that they are visible pre-attentively. The inset shows the result for one electrode without thresholding.}
     \label{fig:recordingphase:3dsound}
 \end{figure}
 
 %The electrodes follow the camera movement of the contextual view but remain oriented in the way they actually are within the patient. This way, the surgeon does not need to keep the orientation of the electrodes in mind and can more easily the structural information with the MER time domain.
-It is important to bridge the gap between the MER signal, defined over the time domain, and the structual data, contained in the imaging data. We achieve this by employing an audio visualization that directly combines the spatial information of the electrodes with their temporal electric signal. Each electrode shows its electric signal as concentric discs around the centerline. The discs start at the back end of the electrode with a radius that scales linearly with the absolute value of the amplitude. As soon as the next measurement is registered the discs move away from the electrode and a new disc is inserted at the back end. This way the signal originates from the electrode and moves away from it over time. Considering the absolute value of the amplitude is sufficient as the spikes are distributed symmetrically and surgeons are not interested if the spikes occur because of a negative potential difference or a positive one. The discs are distorted since they are drawn perspectively. This is not a serious problem because, on the one hand, the actual amplitude of the signal is not as important as the frequency of the signal and, on the other hand, the 2D signal is presented to the surgeon as a backup as well.
+It is important to bridge the gap between the MER signal, defined over the time domain, and the structual data, contained in the imaging data. We achieve this by employing an audio visualization that directly combines the spatial information of the electrodes with their temporal electric signal. Each electrode shows its electric signal as concentric discs around the centerline. The discs start at the back end of the electrode with a radius that scales linearly with the absolute value of the amplitude. As soon as the next measurement is registered the discs move away from the electrode and a new disc is inserted at the back end. This way the signal originates from the electrode and moves away from it over time. Considering the absolute value of the amplitude is sufficient as the spikes are distributed symmetrically and surgeons are not interested if the spikes occur because of a negative potential difference or a positive one. The discs are distorted since they are drawn perspectively. This is not a serious problem because, on the one hand, the actual amplitude of the signal is not as important as the spike frequency and, on the other hand, the 2D signal is presented to the surgeon as a backup as well.
 
-Creating a disc for every measurement point would clutter the whole view (see inset in Figure~\ref{fig:recordingphase:3dsound}). Therefore we apply the same thresholding technique as described in the previous section, but discard all signals which lie below the threshold completely.
+Creating a disc for every measurement point would clutter the whole view (see inset in Figure~\ref{fig:recordingphase:3dsound}). Therefore we apply the same thresholding technique as described in the previous section, but discard all signals below the threshold completely.
 
 %In the 2D case the color was used to separate the thresholded values but since we only keep the spike values, we can use the results of the analysis from Section~\ref{sec:overview:recording:signalanalysis} to color and shade the visualized discs.
 
 \subsection{Placement Phase}\label{sec:overview:placement}
 In the placement phase the surgeon needs to consider all acquired information to decide on the optimal position of the stimulating electrode. This decision is based on three different factors that are all affected by varying uncertainties.
 
-First, his experience and knowledge by selecting and segmenting the intended target region during the planning phase. The segmentation is uncertain as, for example, the brain shifts from its scanned position during the operation. There exist techniques to reduce this uncertainty and we estimate this uncertainty by measuring the difference between the expected electrode position and the reconstructed position based on the x-ray images. Second, the results of the MER recording and the area along the trajectory. The uncertainty for this step is highly dependent on both the algorithm used to analyze the MER signal and the electrode configuration. The third factor is acquired when the stimulating electrode is inserted and activated. The surgical staff will test different brain functions of the patient. Since it is well-known which areas affect which capabilities while stimulated, the surgeon can further narrow down the location of the optimal target region. In our example we use two brain functions, the ability to recall events from long-term memory and an increase in tremor of the patient's hand. Each of the functions is tested separately along the access path and, based on the surgeons experience and a user-neutral heuristic, it is possible to deduce the position of the target region relative to the measurement point. The level of uncertainty for this information is relatively constant and in the same range as the extent of the electrodes, i.\,e.~$< 1.5 mm$ for our setup. For each decision factor we independently measure the probability, and uncertainty, of the target region's position along the access path.
+First, his experience and knowledge by selecting and segmenting the intended target region during the planning phase. The segmentation is uncertain as, for example, the brain shifts from its scanned position during the operation. There exist techniques to reduce this uncertainty and we estimate this uncertainty by measuring the difference between the expected electrode position and the reconstructed position based on the x-ray images. Second, the results of the MER recording and the area along the trajectory. The uncertainty for this step is highly dependent on both the algorithm used to analyze the MER signal and the electrode configuration. The third factor is acquired when the stimulating electrode is inserted and activated. The surgical staff will test different brain functions of the patient. Since it is well-known which areas affect which capabilities while stimulated, the surgeon can further narrow down the location of the optimal target region. In our example we use two brain functions, the ability to recall events from long-term memory and an increase in tremor of the patient's hand. Each of the functions is tested separately along the access path and, based on the surgeon's experience and a patient-neutral heuristic, it is possible to deduce the position of the target region relative to the measurement point. The level of uncertainty for this information is relatively constant and in the same range as the extent of the electrodes, i.\,e.~$< 1.5 mm$ for our setup. For each decision factor we independently measure the probability, and uncertainty, of the target region's position along the access path.
    %To aid in this final phase, we provide the surgeon with five different linked views. In contrast to the recording phase, where there were five recording electrodes, the surgeon only inserts a single stimulating electrode in the placement step, so that only a single electrode is presented in each view.
 
-The contextual view introduced above is shown to maintain the surgeon's mental registration. However, since the whole trajectory has been measured in the previous phase all beads and all information previously acquired in the canal tube is presented independent of the electrode position. 
+The contextual view introduced above is shown to maintain the surgeon's mental registration. Since the whole trajectory has been measured in the previous phase, however, all beads and all information previously acquired in the canal tube is presented independent of the electrode position. 
 
 %\subsubsection{Spatial Audio Visualization}\label{sec:overview:placement:spatialaudio}
 %\begin{figure}[t]
@@ -361,7 +361,7 @@ The contextual view introduced above is shown to maintain the surgeon's mental r
   \label{fig:targetregion}
 \end{figure}
 
-The localization procedure must not only communicate the electrode's position with respect to anatomical structures, but also with regard to the intended target region. An optimal placement of the stimulation electrode should be in the intersection of the potential target regions obtained from the different measurements. We support this in-detail navigation aspect by providing a 3D visualization, to which we refer as \emph{target closeup}, that shows the electrode embedded within the potential target regions together with the intended target region. To relate these potential target regions to the electrode and embed them into the spatial context, we additionally display the pre-operative MRI scans as a view-dependent projection on the back faces of the target closeup's bounding box. The rendering of the datasets has been made optional, as it on the one hand can provide valuable information regarding the intersection between the electrode and structures of interest, but on the other hand also occludes the potential target regions. The same orientation overlay is used in the electrode closeup, which is also used in the other 3D representations, to allow a seamless embedding of this view.
+The localization procedure must not only communicate the electrode's position with respect to anatomical structures, but also with regard to the intended target region. An optimal placement of the stimulation electrode should be in the intersection of the potential target regions obtained from the different measurements. We support this in-detail navigation aspect by providing a 3D visualization, to which we refer as \emph{target closeup}, that shows the electrode embedded in the potential target regions together with the intended target region. To relate these potential target regions to the electrode and embed them into the spatial context, we additionally display the pre-operative MRI scans as a view-dependent projection on the back faces of the target closeup's bounding box. The rendering of the datasets has been made optional, as it on the one hand can provide valuable information regarding the intersection between the electrode and structures of interest, but on the other hand also occludes the potential target regions. The same orientation overlay, which is also used in the other 3D representations, is used in the electrode closeup to allow a seamless embedding of this view.
 %To support the placement process multiple potential target regions and their intersection are shown in a fused manner. These potential target regions are: the pre-operatively planned one using the MRI data, the one derived from the MER measurements, the information from the x-ray scans, and the regions derived from the patient tests, e.\,g. speech, memory and movement.
 
 We have to deal with three different types of potential target regions, whereby the type of a region is dependent on the way it has been acquired. First, the \emph{planned region}, which has been manually defined through segmentation by the surgeon on the basis of the pre-operative MRI scan. Therefore, we can apply volume rendering to show the result of this planning process. The second type of potential target region is derived from the \emph{MER signal} and has considerable uncertainty. This is projected onto the bottom plane of the detail view with the color coding which we have also used for visualizing the original MER signal. A user-defined safety margin is displayed to account for the occurring uncertainty sources. The third type of potential target region derive from the \emph{patient tests} performed when placing the actual stimulation electrode. As the patient checks are conducted during the electrode placement phase, the corresponding regions are changeable interactively. The region is shown as an ellipsoid in 3D assembled by connecting several check points. In the example shown in Figure~\ref{fig:targetregion}, we depict the ellipsoid generated from multiple speech tests in yellow, while the ellipsoid obtained from the movement tests is depicted in blue. The safety margins are depicted by using transparency, as it allows to communicate them intuitively while still maintaining a moderate level of occlusion. The width of the safety margins can be changed interactively by the surgeon and is dependent on experience and the electrode configuration that is used in the intervention.
